refactor: устранены замечания SonarQube